# Project_Lib_Matrix

./: .gitattributes  .gitignore  README.md
StaticLib/: ClassMatrixs.cpp  Matrixs.h
demo/: CMakeLists.txt
demo/StaticLib/: ClassMatrix.cpp  ClassMatrixs.cpp  Matrix.cpp  Matrix.h
demo/lib/: Matrix.cpp  Matrix.h
demo/tests/: tests.cpp
tests/: tests.cpp
